<resources>
    <string name="app_name">IIFLProjectTask</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_email">Email</string>
    <string name="login">Login</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_value">Value</string>
    <string name="lbl_change">Change</string>
    <string name="lbl_view_1">View 1</string>
    <string name="lbl_view_2">View 2</string>
</resources>